Removed screenfull.js library, now we have our own native fullscreen polyfill that works better on iOS and focused on video. Removed workaround with vgSrc, it doesn't works with IE. Added new behaviours for mobile devices (hide volume controls) and iOS devices (enter fullscreen after metadata is loaded). Updated volumebar, now is hiding with "visibility" instead of "display", this fixes problems on some browsers. Updated some directives with restrict "AE". Updated controlbar with new fullscreen api.

--- a/examples/themes/default/videogular.css
+++ b/examples/themes/default/videogular.css
@@ -40,6 +40,7 @@
 [vg-overlayplay], vg-overlayplay {
 	width: 100%;
 	height: 100%;
+	position: absolute;
 }
 
 .overlayPlayContainer {
@@ -67,6 +68,7 @@
 [vg-buffering], vg-buffering {
 	width: 100%;
 	height: 100%;
+	position: absolute;
 }
 
 .bufferingContainer {
@@ -189,7 +191,6 @@
 	width: 50px;
 	height: 100px;
 	top: -100px;
-	margin-left: -25px;
 	vertical-align: middle;
 	text-align: center;
 	position: absolute;
